# vscode-env-zephyr

./: .gitignore  Dockerfile.espressif  README.md  serial-server.py
scripts/: zephyr.code-workspace
scripts/espressif/: entrypoint.sh  init.sh  west.yml
workdir/.west/: config
workdir/blink/: CMakeLists.txt
workdir/blink/src/: main.c
workspace/: zephyr.code-workspace
workspace/apps/: README.md
workspace/apps/blink/: CMakeLists.txt  blink.overlay
workspace/apps/blink/lib/say_hello/: CMakeLists.txt
workspace/apps/blink/lib/say_hello/include/: say_hello.h
workspace/apps/blink/lib/say_hello/src/: say_hello.c
workspace/apps/blink/src/: main.c
workspace/apps/cmake_test/: CMakeLists.txt
workspace/apps/cmake_test/include/: my_lib.h
workspace/apps/cmake_test/src/: main.c  my_lib.c
workspace/blink/: CMakeLists.txt  blink.overlay
workspace/blink/src/: main.c
workspace/manifest/: west.yml
workspace/modules/: README.md
